reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__checksum.rs_line_170_col_5.log

*** crates/tracewake-core/src/checksum.rs:170:5: replace compute_physical_checksum -> PhysicalChecksumReport with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/checksum.rs
+++ replace compute_physical_checksum -> PhysicalChecksumReport with Default::default()
@@ -162,140 +162,17 @@
         PhysicalChecksum::from_canonical_lines(&self.canonical_input)
     }
 }
 
 pub fn compute_physical_checksum(
     state: &PhysicalState,
     context: &ChecksumContext,
 ) -> PhysicalChecksumReport {
-    let mut lines = vec![
-        format!("fixture_id={}", context.fixture_id.as_str()),
-        format!("content_version={}", context.content_version.as_str()),
-        format!("sim_tick={}", context.sim_tick.value()),
-        format!(
-            "world_stream_position_applied={}",
-            context.world_stream_position_applied
-        ),
-    ];
-
-    for (actor_id, actor) in &state.actors {
-        lines.push(format!(
-            "actor|id={}|place={}|enabled={}|carried={}",
-            actor_id.as_str(),
-            actor.current_place_id.as_str(),
-            actor.enabled,
-            join_ids(actor.carried_item_ids.iter().map(|id| id.as_str()))
-        ));
-    }
-
-    for (place_id, place) in &state.places {
-        lines.push(format!(
-            "place|id={}|label={}|adjacent={}|doors={}|containers={}|items={}|actors={}",
-            place_id.as_str(),
-            place.display_label,
-            join_ids(place.adjacent_place_ids.iter().map(|id| id.as_str())),
-            join_ids(place.connected_door_ids.iter().map(|id| id.as_str())),
-            join_ids(place.local_container_ids.iter().map(|id| id.as_str())),
-            join_ids(place.local_item_ids.iter().map(|id| id.as_str())),
-            join_ids(place.local_actor_ids.iter().map(|id| id.as_str()))
-        ));
-    }
-
-    for (door_id, door) in &state.doors {
-        lines.push(format!(
-            "door|id={}|a={}|b={}|open={}|locked={}|key={}|blocks_closed={}",
-            door_id.as_str(),
-            door.endpoint_a.as_str(),
-            door.endpoint_b.as_str(),
-            door.is_open,
-            door.is_locked,
-            door.access_key_item_id
-                .as_ref()
-                .map(|id| id.as_str())
-                .unwrap_or(""),
-            door.blocks_movement_when_closed
-        ));
-    }
-
-    for (container_id, container) in &state.containers {
-        lines.push(format!(
-            "container|id={}|location={}|open={}|locked={}|contents={}|visible_when_closed={}",
-            container_id.as_str(),
-            location_key(&container.location),
-            container.is_open,
-            container.is_locked,
-            join_ids(container.contents.iter().map(|id| id.as_str())),
-            container.contents_visible_when_closed
-        ));
-    }
-
-    for (item_id, item) in &state.items {
-        lines.push(format!(
-            "item|id={}|portable={}|carry_cost={}|location={}|value={}",
-            item_id.as_str(),
-            item.portable,
-            item.carry_cost,
-            location_key(&item.location),
-            item.value_token
-                .as_ref()
-                .map(|value| format!("{}:{}", value.denomination, value.quantity))
-                .unwrap_or_default()
-        ));
-    }
-
-    for (food_supply_id, food) in &state.food_supplies {
-        lines.push(format!(
-            "food_supply|id={}|location={}|servings={}|hunger_reduction={}",
-            food_supply_id.as_str(),
-            location_key(&food.location),
-            food.servings,
-            food.hunger_reduction_per_serving
-        ));
-    }
-
-    for (workplace_id, workplace) in &state.workplaces {
-        lines.push(format!(
-            "workplace|id={}|place={}|assigned={}|duration={}|fatigue_delta={}|hunger_delta={}|max_fatigue={}|max_hunger={}|access_open={}|output_tag={}",
-            workplace_id.as_str(),
-            workplace.place_id.as_str(),
-            join_ids(workplace.assigned_actor_ids.iter().map(|id| id.as_str())),
-            workplace.work_duration_ticks,
-            workplace.fatigue_delta_per_tick,
-            workplace.hunger_delta_per_tick,
-            workplace.max_fatigue_to_start,
-            workplace.max_hunger_to_start,
-            workplace.access_open,
-            workplace.output_tag
-        ));
-    }
-
-    for (sleep_affordance_id, sleep_affordance) in &state.sleep_affordances {
-        lines.push(format!(
-            "sleep_affordance|id={}|place={}|access_open={}|rest_quality={}|duration_ticks={}|fatigue_recovery_per_tick={}|hunger_rise_per_tick={}",
-            sleep_affordance_id.as_str(),
-            sleep_affordance.place_id.as_str(),
-            sleep_affordance.access_open,
-            sleep_affordance.rest_quality,
-            sleep_affordance.duration_ticks,
-            sleep_affordance.fatigue_recovery_per_tick,
-            sleep_affordance.hunger_rise_per_tick
-        ));
-    }
-
-    lines.push(format!(
-        "need_model|awake_hunger_delta_per_tick={}|awake_fatigue_delta_per_tick={}",
-        state.need_model.awake_hunger_delta_per_tick, state.need_model.awake_fatigue_delta_per_tick
-    ));
-
-    let checksum = PhysicalChecksum::from_canonical_lines(&lines);
-    PhysicalChecksumReport {
-        checksum,
-        canonical_input: lines,
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 #[derive(Clone, Debug, PartialEq, Eq, PartialOrd, Ord, Hash)]
 pub struct AgentStateChecksum(String);
 
 impl AgentStateChecksum {
     pub fn as_str(&self) -> &str {
         &self.0


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `PhysicalChecksumReport: Default` is not satisfied
   --> crates/tracewake-core/src/checksum.rs:170:5
    |
170 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `PhysicalChecksumReport`
   --> crates/tracewake-core/src/checksum.rs:155:1
    |
155 | pub struct PhysicalChecksumReport {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
